[package]
name = "axum-jwt"
version = "0.1.0"
edition = "2024"
description = "Axum JWT extractors and middleware"
documentation = "https://docs.rs/axum-jwt"
readme = "README.md"
keywords = ["jwt", "axum"]
categories = [
    "authentication",
    "network-programming",
    "web-programming",
    "web-programming::http-server",
]

[dependencies]
axum-core = { version = "0.5.2" }
http = "1.3.1"
jsonwebtoken = { version = "9.3.1", default-features = false }
serde = "1.0.219"
