[workspace]
resolver = "3"
members = ["axum-jwt", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["nanoqsh"]
keywords = ["jwt", "axum"]
categories = [
    "authentication",
    "web-programming",
    "web-programming::http-server",
]
repository = "https://github.com/nanoqsh/axum-jwt"
rust-version = "1.88"

[workspace.dependencies]
axum-jwt = { version = "0.1.0", path = "axum-jwt" }
axum = { version = "0.8.4", default-features = false }
axum-core = "0.5.2"
http = "1.3.1"
jsonwebtoken = { version = "9.3.1", default-features = false }
serde = "1.0.219"
tokio = "1.47.0"
